--- a/index.html
+++ b/index.html
@@ -43,13 +43,16 @@
             <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
         </section>
         <div class="section">
-            <p>For a few years, as a secondary activity, I have been dealing with website editing, programming languages and program development, e.g.: html, css, javascript.</p>
+            <p>For a few years, as a secondary activity, I have been dealing with website editing, 
+               program development and programming languages, mainly: html, css, javascript.</p>
             <br>
-            <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience. It was a very good opportunity at</p>
+            <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience.
+                This was a very good opportunity at</p>
                 <a href="https://hu.codeberryschool.com/" title="Code Berry School" target="_blank">
                     <span>Code Berry School.</span></a>
             <br><br>
-            <p>You can view some of my previous works in the other menu items. You can view it on Facebook and Gmail by clicking the links below.</p>
+            <p>You can see some of my previous student works in the menus below.
+               You can find it on Facebook and Gmail by clicking on the links below.</p>
             <br>
             <h3>Have a nice day !</h3>
                 </div>
