Portrait Mode JS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
+
 <head>
 
     <meta charset="UTF-8">
@@ -30,7 +31,9 @@
 
 </head>
 
-<body class="grid-container">
+
+<body id="lockPortraitMode" class="grid-container">
+    <script src="js/window.js"></script>
 
     <header>
         <div class="profile-image">
@@ -116,8 +119,7 @@
         </div>
     </footer> 
 
-    <script src="js/scroll.js"></script>
-
 </body>
+
 
 </html>
