--- a/index.html
+++ b/index.html
@@ -32,20 +32,27 @@
 </head>
 
 
-<body id="lockPortraitMode" class="grid-container">
+<body id="lockPortraitMode">
     <script src="js/window.js"></script>
 
     <header>
         <div class="profile-image">
             <img src="image/Main.jpg" alt="Viktor M Jozsa">
         </div>
-        <section class="section-headline">
+        <div class="social-media left">
+            <a href="https://www.facebook.com/viktor.jozsa.5" title="Facebook" target="_blank">
+                <i class="fa fa-2x fa-facebook"></i></a>
+            <a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
+                <i class="fa fa-2x fa-google" aria-hidden="true"></i></a>
+        </div>
+        <section class="section-headline center">
             <h1>Viktor M Jozsa</h1>
-            <h2>Web developer ~ Junior frontend programmer</h2>
+            <h2>Web developer</h2>
+            <h2> Junior frontend programmer</h2>
             <br>
             <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
         </section>
-        <div class="section">
+        <div class="section center">
             <p>For a few years, as a secondary activity, I have been dealing with website editing, 
                program development and programming languages, mainly: html, css, javascript.</p>
             <br>
@@ -58,66 +65,55 @@
                You can find it on Facebook and Gmail by clicking on the links below.</p>
             <br>
             <h3>Have a nice day !</h3>
-                </div>
+        </div>
     </header>
-
+          
     <main>
-        <section class="student-countainer">
-            <h2>~ Student Works</h2>
+        <section class="student-countainer right">
+            <h2>STUDENT WORKS</h2>
+                <br>
             <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
-                <span class="student-item">Basics Project</span></a>
+                <span class="student-item">Basics Project</span></a>|
             <a href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
-                <span class="student-item">Responsive Blog Site</span></a>
+                <span class="student-item">Responsive Blog Site</span></a>|
             <a href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" target="_blank">
-                <span class="student-item">Online Name Card</span></a>
+                <span class="student-item">Online Name Card</span></a>|
             <a href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" target="_blank">
-                <span class="student-item">Wedding Website</span></a>
+                <span class="student-item">Wedding Website</span></a>|
             <a href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
-                <span class="student-item">Color Clock ~ JavaScript</span></a>
-        </section>
-        <section class="work-countainer">
-            <h2>Junior Student Works ~</h2>
+                <span class="student-item">Color Clock - JavaScript</span></a>|
             <a href="https://viktormihalyjozsa.github.io/Blog-Site/" title="Github - Blog Page" target="_blank">
-                <span class="work-item">Blog Page</span></a>
+                <span class="work-item">Blog Page</span></a>|
             <a href="https://viktormihalyjozsa.github.io/Contact-Page/" title="Github - Contact Page" target="_blank">
-                <span class="work-item">Contact Page</span></a>
+                <span class="work-item">Contact Page</span></a>|
             <a href="https://viktormihalyjozsa.github.io/Signup-Page/" title="Github - Signup Page" target="_blank">
-                <span class="work-item">Signup Page</span></a>
+                <span class="work-item">Signup Page</span></a>|
             <a href="https://viktormihalyjozsa.github.io/Chat/" title="Github - Chat Interface" target="_blank">
-                <span class="work-item">Chat Interrface</span></a>
+                <span class="work-item">Chat Interrface</span></a>|
             <a href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
-                <span class="student-item">Mines Weeper ~ JS Course</span></a>
+                <span class="student-item">Mines Weeper - JS Course</span></a>
         </section>
-        <section class="work-countainer">
-            <h2>Junior my Works ~</h2>
+            <br><br>
+        <section class="work-countainer left">
+            <h2>JUNIOR MY WORKS</h2>
+                <br>
             <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Holiday's" target="_blank">
-                <span class="work-item">Easter Holiday's</span></a>
+                <span class="work-item">Easter Holiday's</span></a>|
             <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
-                <span class="work-item">V M J</span></a>
+                <span class="work-item">V M J</span></a>|
             <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github - My Wedding Website" target="_blank">
-                <span class="work-item">My Wedding Website</span></a>
+                <span class="work-item">My Wedding Website</span></a>|
             <a href="https://viktormihalyjozsa.github.io/valentin-s-day-heart-finder/" title="Github - Valentine's Day Heart Finder" target="_blank">
-                <span class="work-item">Valentine's Day</span></a>
+                <span class="work-item">Valentine's Day</span></a>|
             <a href="https://viktormihalyjozsa.github.io/valentin-s-day-puzzle/" title="Github - Valentine's Day Puzzle" target="_blank">
-                <span class="work-item">Valentine's Day Puzzle</span></a>
+                <span class="work-item">Valentine's Day Puzzle</span></a>|
             <a href="https://judiths.kitchen/" title="Github - Judith's Kitchen" target="_blank">
-                <span class="work-item">Judith's Kitchen</span></a>
+                <span class="work-item">Judith's Kitchen</span></a>|
             <a href="https://viktormihalyjozsa.github.io/colorful-javascript-basic-calculator/" title="Github - Colorful JavaScript Basic Calculator" target="_blank">
                 <span class="work-item">Colorful Calculator</span></a>
         </section>
     </main>
 
-    <footer>
-        <div class="footer">
-            <ul>
-                <li><span class="contact">Contact :</span></li>
-                <li><a href="https://www.facebook.com/viktor.m.jozsa/" title="Facebook" class="social-icon" target="_blank">
-                    <i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
-                    <i class="fa fa-2x fa-google" aria-hidden="true"></i></a></li>
-            </ul>
-        </div>
-    </footer> 
 
 </body>
 
