--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
           
     <main>
-        <section class="student-countainer right">
+        <div class="student-countainer right">
             <h2>STUDENT WORKS</h2>
                 <br>
             <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
@@ -92,9 +92,8 @@
                 <span class="work-item">Chat Interrface</span></a>|
             <a href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
                 <span class="student-item">Mines Weeper - JS Course</span></a>
-        </section>
-            <br><br>
-        <section class="work-countainer left">
+        </div>
+        <div class="work-countainer left">
             <h2>JUNIOR MY WORKS</h2>
                 <br>
             <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Holiday's" target="_blank">
@@ -111,7 +110,7 @@
                 <span class="work-item">Judith's Kitchen</span></a>|
             <a href="https://viktormihalyjozsa.github.io/colorful-javascript-basic-calculator/" title="Github - Colorful JavaScript Basic Calculator" target="_blank">
                 <span class="work-item">Colorful Calculator</span></a>
-        </section>
+        </div>
     </main>
 
 
