Responsive Website - Mobil Size

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="profile-image">
             <img src="image/Main.jpg" alt="Viktor M Jozsa">
         </div>
-        <div class="social-media left">
+        <div class="social-media">
             <a href="https://www.facebook.com/viktor.jozsa.5" title="Facebook" target="_blank">
                 <i class="fa fa-2x fa-facebook"></i></a>
             <a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
@@ -69,9 +69,8 @@
     </header>
           
     <main>
-        <section class="student-countainer right">
-            <h2>STUDENT WORKS</h2>
-                <br>
+        <div class="work-countainer right"><h2>STUDENT WORKS</h2></div>
+        <div class="work-countainer center">
             <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
                 <span class="student-item">Basics Project</span></a>|
             <a href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
@@ -83,20 +82,20 @@
             <a href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
                 <span class="student-item">Color Clock - JavaScript</span></a>|
             <a href="https://viktormihalyjozsa.github.io/Blog-Site/" title="Github - Blog Page" target="_blank">
-                <span class="work-item">Blog Page</span></a>|
+                <span class="student-item">Blog Page</span></a>|
             <a href="https://viktormihalyjozsa.github.io/Contact-Page/" title="Github - Contact Page" target="_blank">
-                <span class="work-item">Contact Page</span></a>|
+                <span class="student-item">Contact Page</span></a>|
             <a href="https://viktormihalyjozsa.github.io/Signup-Page/" title="Github - Signup Page" target="_blank">
-                <span class="work-item">Signup Page</span></a>|
+                <span class="student-item">Signup Page</span></a>|
             <a href="https://viktormihalyjozsa.github.io/Chat/" title="Github - Chat Interface" target="_blank">
-                <span class="work-item">Chat Interrface</span></a>|
+                <span class="student-item">Chat Interrface</span></a>|
             <a href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
                 <span class="student-item">Mines Weeper - JS Course</span></a>
-        </section>
-            <br><br>
-        <section class="work-countainer left">
-            <h2>JUNIOR MY WORKS</h2>
-                <br>
+        </div>
+    </main>
+    <aside>
+        <div class="work-countainer left"><h2>JUNIOR MY WORKS</h2></div>
+        <div class="work-countainer center">
             <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Holiday's" target="_blank">
                 <span class="work-item">Easter Holiday's</span></a>|
             <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
@@ -111,8 +110,8 @@
                 <span class="work-item">Judith's Kitchen</span></a>|
             <a href="https://viktormihalyjozsa.github.io/colorful-javascript-basic-calculator/" title="Github - Colorful JavaScript Basic Calculator" target="_blank">
                 <span class="work-item">Colorful Calculator</span></a>
-        </section>
-    </main>
+        </div>
+    </aside>
 
 
 </body>
