Responsive Website - Mobil Site

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           
     <main>
         <div class="work-countainer right"><h2>STUDENT WORKS</h2></div>
-        <div class="work-countainer center">
+        <div class="work-countainer border-top center">
             <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
                 <span class="student-item">Basics Project</span></a>|
             <a href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
@@ -95,7 +95,7 @@
     </main>
     <aside>
         <div class="work-countainer left"><h2>JUNIOR MY WORKS</h2></div>
-        <div class="work-countainer center">
+        <div class="work-countainer border-top center">
             <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Holiday's" target="_blank">
                 <span class="work-item">Easter Holiday's</span></a>|
             <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
