Responsive Website - Design and Mobil Site

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <p>You can see some of my previous student works in the menus below.
                You can find it on Facebook and Gmail by clicking on the links below.</p>
             <br>
-            <h3>Have a nice day !</h3>
+            <h3 class="right">Have a nice day !</h3>
         </div>
     </header>
           
