Responsive Section-Write

--- a/index.html
+++ b/index.html
@@ -39,20 +39,21 @@
         <div class="profile-image">
             <img src="image/Main.jpg" alt="Viktor M Jozsa">
         </div>
+        <div class="section-headline center">
+            <h1>Viktor M Jozsa</h1>
+            <h2>Web developer</h2>
+            <h2> Junior frontend programmer</h2>
+            <br>
+            <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
+        </div>
         <div class="social-media">
             <a href="https://www.facebook.com/viktor.jozsa.5" title="Facebook" target="_blank">
                 <i class="fa fa-2x fa-facebook"></i></a>
             <a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
                 <i class="fa fa-2x fa-google" aria-hidden="true"></i></a>
         </div>
-        <section class="section-headline center">
-            <h1>Viktor M Jozsa</h1>
-            <h2>Web developer</h2>
-            <h2> Junior frontend programmer</h2>
-            <br>
-            <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
-        </section>
         <div class="section center">
+            <div class="section-write">
             <p>For a few years, as a secondary activity, I have been dealing with website editing, 
                program development and programming languages, mainly: html, css, javascript.</p>
             <br>
@@ -65,6 +66,23 @@
                You can find it on Facebook and Gmail by clicking on the links below.</p>
             <br>
             <h3 class="right">Have a nice day !</h3>
+
+
+            <p>For a few years, as a secondary activity, I have been dealing with website editing, 
+                program development and programming languages, mainly: html, css, javascript.</p>
+             <br>
+             <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience.
+                 This was a very good opportunity at</p>
+                 <a href="https://hu.codeberryschool.com/" title="Code Berry School" target="_blank">
+                     <span>Code Berry School.</span></a>
+             <br><br>
+             <p>You can see some of my previous student works in the menus below.
+                You can find it on Facebook and Gmail by clicking on the links below.</p>
+             <br>
+             <h3 class="right">Have a nice day !</h3>
+            </div>
+
+
         </div>
     </header>
           
