--- a/index.html
+++ b/index.html
@@ -54,35 +54,19 @@
         </div>
         <div class="section center">
             <div class="section-write">
-            <p>For a few years, as a secondary activity, I have been dealing with website editing, 
-               program development and programming languages, mainly: html, css, javascript.</p>
-            <br>
-            <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience.
-                This was a very good opportunity at</p>
+                <p>For a few years, as a secondary activity, I have been dealing with website editing, 
+                   program development and programming languages, mainly: html, css, javascript.</p>
+                    <br>
+                <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience.
+                   This was a very good opportunity at</p>
                 <a href="https://hu.codeberryschool.com/" title="Code Berry School" target="_blank">
                     <span>Code Berry School.</span></a>
-            <br><br>
-            <p>You can see some of my previous student works in the menus below.
-               You can find it on Facebook and Gmail by clicking on the links below.</p>
-            <br>
-            <h3 class="right">Have a nice day !</h3>
-
-
-            <p>For a few years, as a secondary activity, I have been dealing with website editing, 
-                program development and programming languages, mainly: html, css, javascript.</p>
-             <br>
-             <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience.
-                 This was a very good opportunity at</p>
-                 <a href="https://hu.codeberryschool.com/" title="Code Berry School" target="_blank">
-                     <span>Code Berry School.</span></a>
-             <br><br>
-             <p>You can see some of my previous student works in the menus below.
-                You can find it on Facebook and Gmail by clicking on the links below.</p>
-             <br>
-             <h3 class="right">Have a nice day !</h3>
+                    <br><br>
+                <p>You can find me on Facebook and Gmail by clicking the links above.</p>
+                <p>Below you can see some of my previous student work.</p>
+                    <br>
+                <h3 class="right">Have a nice day !</h3>
             </div>
-
-
         </div>
     </header>
           
