--- a/index.html
+++ b/index.html
@@ -67,54 +67,49 @@
                     <br>
                 <h3 class="right">Have a nice day !</h3>
             </div>
+            <div class="student-countainer-head border-top right"><h2>STUDENT WORKS</h2></div>
+            <div class="student-countainer-list center">
+                <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
+                    <span class="student-item">Basics Project</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
+                    <span class="student-item">Responsive Blog Site</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" target="_blank">
+                    <span class="student-item">Online Name Card</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" target="_blank">
+                    <span class="student-item">Wedding Website</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
+                    <span class="student-item">Color Clock - JavaScript</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/Blog-Site/" title="Github - Blog Page" target="_blank">
+                    <span class="student-item">Blog Page</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/Contact-Page/" title="Github - Contact Page" target="_blank">
+                    <span class="student-item">Contact Page</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/Signup-Page/" title="Github - Signup Page" target="_blank">
+                    <span class="student-item">Signup Page</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/Chat/" title="Github - Chat Interface" target="_blank">
+                    <span class="student-item">Chat Interrface</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
+                    <span class="student-item">Mines Weeper - JS Course</span></a>
+            </div>
+            <div class="work-countainer-head border-top left"><h2>JUNIOR MY WORKS</h2></div>
+            <div class="work-countainer-list center">
+                <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Holiday's" target="_blank">
+                    <span class="work-item">Easter Holiday's</span></a>|
+                <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
+                    <span class="work-item">V M J</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github - My Wedding Website" target="_blank">
+                    <span class="work-item">My Wedding Website</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/valentin-s-day-heart-finder/" title="Github - Valentine's Day Heart Finder" target="_blank">
+                    <span class="work-item">Valentine's Day</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/valentin-s-day-puzzle/" title="Github - Valentine's Day Puzzle" target="_blank">
+                    <span class="work-item">Valentine's Day Puzzle</span></a>|
+                <a href="https://judiths.kitchen/" title="Github - Judith's Kitchen" target="_blank">
+                    <span class="work-item">Judith's Kitchen</span></a>|
+                <a href="https://viktormihalyjozsa.github.io/colorful-javascript-basic-calculator/" title="Github - Colorful JavaScript Basic Calculator" target="_blank">
+                    <span class="work-item">Colorful Calculator</span></a>
+            </div>
+
         </div>
     </header>
-          
-    <main>
-        <div class="work-countainer right"><h2>STUDENT WORKS</h2></div>
-        <div class="work-countainer border-top center">
-            <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
-                <span class="student-item">Basics Project</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
-                <span class="student-item">Responsive Blog Site</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" target="_blank">
-                <span class="student-item">Online Name Card</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" target="_blank">
-                <span class="student-item">Wedding Website</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
-                <span class="student-item">Color Clock - JavaScript</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/Blog-Site/" title="Github - Blog Page" target="_blank">
-                <span class="student-item">Blog Page</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/Contact-Page/" title="Github - Contact Page" target="_blank">
-                <span class="student-item">Contact Page</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/Signup-Page/" title="Github - Signup Page" target="_blank">
-                <span class="student-item">Signup Page</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/Chat/" title="Github - Chat Interface" target="_blank">
-                <span class="student-item">Chat Interrface</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
-                <span class="student-item">Mines Weeper - JS Course</span></a>
-        </div>
-    </main>
-    <aside>
-        <div class="work-countainer left"><h2>JUNIOR MY WORKS</h2></div>
-        <div class="work-countainer border-top center">
-            <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Holiday's" target="_blank">
-                <span class="work-item">Easter Holiday's</span></a>|
-            <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
-                <span class="work-item">V M J</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github - My Wedding Website" target="_blank">
-                <span class="work-item">My Wedding Website</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/valentin-s-day-heart-finder/" title="Github - Valentine's Day Heart Finder" target="_blank">
-                <span class="work-item">Valentine's Day</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/valentin-s-day-puzzle/" title="Github - Valentine's Day Puzzle" target="_blank">
-                <span class="work-item">Valentine's Day Puzzle</span></a>|
-            <a href="https://judiths.kitchen/" title="Github - Judith's Kitchen" target="_blank">
-                <span class="work-item">Judith's Kitchen</span></a>|
-            <a href="https://viktormihalyjozsa.github.io/colorful-javascript-basic-calculator/" title="Github - Colorful JavaScript Basic Calculator" target="_blank">
-                <span class="work-item">Colorful Calculator</span></a>
-        </div>
-    </aside>
-
 </body>
 
 
