--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="social-media">
-            <a href="https://www.facebook.com/viktor.jozsa.5" title="Facebook" target="_blank">
+            <a href="https://www.facebook.com/viktor.m.jozsa" title="Facebook" target="_blank">
                 <i class="fa fa-2x fa-facebook"></i></a>
             <a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
                 <i class="fa fa-2x fa-google" aria-hidden="true"></i></a>
