--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                         title="Github - Judith's Kitchen" target="_blank">Judith's Kitchen</a></li>
                     <li class="work-item left"><a href="https://viktormihalyjozsa.github.io/colorful-javascript-basic-calculator/" 
                         title="Github - Colorful JavaScript Basic Calculator" target="_blank">Colorful Calculator</a></li>
+                    <li class="work-item center"><a href="https://viktormihalyjozsa.github.io/DropDown-Menu-and-Hamburger-Icon/" 
+                        title="Github - DropDown-Menu-and-Hamburger-Icon" target="_blank">DropDown Menu & Hamburger Icon</a></li>
                     <li class="work-item right"><a href="https://viktormihalyjozsa.github.io/Minesweeper-2025/" 
                         title="Github - Minesweeper-2025" target="_blank">Minesweeper-2025</a></li>
-                    <li class="work-item right"><a href="https://viktormihalyjozsa.github.io/DropDown-Menu-and-Hamburger-Icon/" 
-                        title="Github - DropDown-Menu-and-Hamburger-Icon" target="_blank">DropDown Menu & Hamburger Icon</a></li>
                 </ul>
             </div>
             
