--- a/index.html
+++ b/index.html
@@ -3,24 +3,38 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Viktor M Jozsa</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Viktor M Jozsa - Web developer, Junior frontend programmer">
+    <meta name="keywords" content="Viktor M Jozsa, Web developer, Junior frontend programmer">
+    <meta name="author" content="Viktor M Jozsa">
+    <meta property="og:title" content="Viktor M Jozsa">
+    <meta property="og:description" content="Web developer, Junior frontend programmer">
+    <meta property="og:image" content="image/Main.jpg">
+    <meta property="og:url" content="https://viktormihalyjozsa.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Viktor M Jozsa">
+    <meta property="og:locale" content="en_US">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@viktor.m.jozsa">
+    <meta name="twitter:creator" content="@viktor.m.jozsa">
+    <meta name="twitter:title" content="Viktor M Jozsa">
+    <meta name="twitter:description" content="Web developer, Junior frontend programmer">
+    <meta name="twitter:image" content="image/Main.jpg">
+    <link rel="canonical" href="https://viktormihalyjozsa.github.io/">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="image/favicon.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="image/favicon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="image/favicon.png">
     <link rel="icon" type="image/png" href="image/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" 
           integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" 
           crossorigin="anonymous" referrerpolicy="no-referrer">
-
-    <meta name="viewport" content="width=device-width initial-scale=1">
-
-    <meta name='description' content='Viktor M Jozsa, Junior front end developer, programmer'>
-    <meta name='keywords' content='Viktor M Jozsa, Viktor M Józsa, Józsa Viktor, Viktor Józsa, Junior front end developer, programmer'>
-
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/components.css">
@@ -99,6 +113,12 @@
                         title="Github - Judith's Kitchen" target="_blank">Judith's Kitchen</a></li>
                     <li class="work-item left"><a href="https://viktormihalyjozsa.github.io/colorful-javascript-basic-calculator/" 
                         title="Github - Colorful JavaScript Basic Calculator" target="_blank">Colorful Calculator</a></li>
+                    <li class="work-item center"><a href="https://viktormihalyjozsa.github.io/DropDown-Menu-and-Hamburger-Icon/" 
+                        title="Github - DropDown-Menu-and-Hamburger-Icon" target="_blank">DropDown Menu & Hamburger Icon</a></li>
+                    <li class="work-item right"><a href="https://viktormihalyjozsa.github.io/Months-in-Styles/" 
+                        title="Github - Months-in-Styles" target="_blank">Months in Styles</a></li>
+                    <li class="work-item right"><a href="https://viktormihalyjozsa.github.io/Minesweeper-2025/" 
+                        title="Github - Minesweeper-2025" target="_blank">Minesweeper-2025</a></li>
                 </ul>
             </div>
         </div>
