--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         title="Github - DropDown-Menu-and-Hamburger-Icon" target="_blank">DropDown Menu & Hamburger Icon</a></li>
                     <li class="work-item right"><a href="https://viktormihalyjozsa.github.io/Months-in-Styles/" 
                         title="Github - Months-in-Styles" target="_blank">Months in Styles</a></li>
-                    <li class="work-item right"><a href="https://viktormihalyjozsa.github.io/Minesweeper-2025/" 
+                    <li class="work-item center"><a href="https://viktormihalyjozsa.github.io/Minesweeper-2025/" 
                         title="Github - Minesweeper-2025" target="_blank">Minesweeper-2025</a></li>
                 </ul>
             </div>
