--- a/index.html
+++ b/index.html
@@ -1,32 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>Viktor M Jozsa</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="description" content="Viktor M Jozsa - Web developer, Junior frontend programmer">
     <meta name="keywords" content="Viktor M Jozsa, Web developer, Junior frontend programmer">
     <meta name="author" content="Viktor M Jozsa">
-    <meta property="og:title" content="Viktor M Jozsa">
-    <meta property="og:description" content="Web developer, Junior frontend programmer">
-    <meta property="og:image" content="image/Main.jpg">
-    <meta property="og:url" content="https://viktormihalyjozsa.github.io/">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Viktor M Jozsa">
-    <meta property="og:locale" content="en_US">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@viktor.m.jozsa">
-    <meta name="twitter:creator" content="@viktor.m.jozsa">
-    <meta name="twitter:title" content="Viktor M Jozsa">
-    <meta name="twitter:description" content="Web developer, Junior frontend programmer">
-    <meta name="twitter:image" content="image/Main.jpg">
-    <link rel="canonical" href="https://viktormihalyjozsa.github.io/">
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="image/favicon.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="image/favicon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="image/favicon.png">
+    
     <link rel="icon" type="image/png" href="image/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" 
           integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" 
