--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         title="Github - Valentine's Day Heart Finder" target="_blank">Valentine's Day</a></li>
                     <li class="work-item center"><a href="https://viktormihalyjozsa.github.io/valentin-s-day-puzzle/" 
                         title="Github - Valentine's Day Puzzle" target="_blank">Valentine's Day Puzzle</a></li>
-                    <li class="work-item right"><a href="https://judiths.kitchen/" 
+                    <li class="work-item right"><a href="https://viktormihalyjozsa.github.io/judith-s-kitchen/" 
                         title="Github - Judith's Kitchen" target="_blank">Judith's Kitchen</a></li>
                     <li class="work-item left"><a href="https://viktormihalyjozsa.github.io/colorful-javascript-basic-calculator/" 
                         title="Github - Colorful JavaScript Basic Calculator" target="_blank">Colorful Calculator</a></li>
