--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         </div>
         <div class="section-headline center">
             <h1>Viktor M Jozsa</h1>
-            <h2>Web developer</h2>
-            <h2> Junior frontend programmer</h2>
+            <h2>Junior Frontend Web Developer</h2>
             <br>
             <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
         </div>
