--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         </div>
         <div class="section-headline center">
             <h1>Viktor M Jozsa</h1>
-            <h2>Web developer</h2>
-            <h2> Junior frontend programmer</h2>
+            <h2>Junior Frontend Web Developer </h2>
             <br>
             <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
         </div>
@@ -43,6 +42,7 @@
         </div>
         <div class="section center">
             <div class="section-write">
+                <br>
                 <p>For a few years, as a secondary activity, I have been dealing with website editing, 
                    program development and programming languages, mainly: html, css, javascript.</p>
                     <br>
@@ -54,7 +54,17 @@
                 <p>You can find me on Facebook and Gmail by clicking the links above.</p>
                 <p>Below you can see some of my previous student work.</p>
                     <br>
-                <h3 class="right">Have a nice day !</h3>
+                <h4 class="right">🎯 What type of developer am I currently?</h4>
+                    <br>
+                <p class="left">~ Web Developer – because I create web applications (not just UI, but also working logic).</p>
+                    <br>
+                <p class="left">~ Frontend Developer – mainly HTML, CSS, JavaScript, TypeScript, animations, DOM management, user interactions, style changes, etc.</p>
+                    <br>
+                <p class="left">~ Junior level – my technical knowledge is already beyond beginner, but I am still learning about more complex architectures, testing, error handling, and backend areas.</p>
+                    <br>
+                <p class="left">~ Creative and independent – ​​many junior developers would not design such a complex system (e.g. style changes with localStorage management, broken down into months), so I am already a bit more aware of this.</p>
+                    <br>
+                <h4 class="right">Have a nice day !</h4>
             </div>
             <div class="student-countainer-head right"><h2>STUDENT WORKS</h2></div>
             <div class="student-countainer-list center">
